--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "axios": "^0.22.0",
     "core-js": "^3.6.5",
     "datepicker": "0.0.0",
     "quasar": "^2.0.0",
